--- a/style.css
+++ b/style.css
@@ -269,9 +269,9 @@ body {
 input[type="checkbox"]::before {
   content: "✔";
   position: absolute;
-  font-size: 1.5em;
-  right: -1px;
-  top: -0.25em;
+  font-size: 25px;
+  right: 1px;
+  top: -0.35em;
   visibility: hidden;
 }
 
