--- a/style.css
+++ b/style.css
@@ -226,6 +226,35 @@ body {
   font-weight: 500;
 }
 
+.fill {
+  position: absolute;
+  display: inline-block;
+  width: 180px;
+  height: 30px;
+  left: 305px;
+  background-color: var(--highrose-color);
+  color: var(--white-color);
+  text-align: center;
+  padding-top: 4px;
+  border-radius: 6px;
+}
+
+.fill-book-title {
+  top: 136px;
+  
+}
+
+.fill-book-author {
+  top: 195px;
+}
+
+.fill-book-pages {
+  width: 340px;
+  top: 254px;
+}
+
+
+
 .popup input {
   width: 100%;
   height: 24px;
